@@ -1,4 +1,4 @@
-# $NetBSD: tools.SunOS.mk,v 1.38 2012/05/21 15:19:13 jperkin Exp $
+# $NetBSD: tools.SunOS.mk,v 1.39 2012/06/15 09:54:41 jperkin Exp $
 #
 # System-supplied tools for the Solaris operating system.
 #
@@ -188,7 +188,11 @@ TOOLS_PLATFORM.sleep?=		/bin/sleep
 TOOLS_PLATFORM.soelim?=		/usr/bin/soelim
 .endif
 TOOLS_PLATFORM.sort?=		/usr/bin/sort
+.if exists(/usr/ccs/bin/strip)
 TOOLS_PLATFORM.strip?=		/usr/ccs/bin/strip
+.elif exists(/usr/bin/strip)
+TOOLS_PLATFORM.strip?=		/usr/bin/strip
+.endif
 TOOLS_PLATFORM.tail?=		/usr/xpg4/bin/tail
 .if exists(/usr/bin/tbl)
 TOOLS_PLATFORM.tbl?=		/usr/bin/tbl
